<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100" >
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/cabecera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwordreg"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" >
    </EditText>
    
    <EditText
        android:id="@+id/nombrer"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:textColor="#FFFFFF" >
    </EditText>
    
    <EditText
        android:id="@+id/apellido1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/nombrer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/apellido1"
        android:textColor="#FFFFFF" >
    </EditText>
    
    <EditText
        android:id="@+id/descripcion"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/apellido1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/descripcionreg"
        android:textColor="#FFFFFF" >
    </EditText>
    
    <ImageView
        android:id="@+id/fotoreg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/descripcion"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true" />
    <TextView
    android:id="@+id/myImageViewText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/fotoreg"
    android:layout_alignTop="@+id/fotoreg"
    android:layout_alignRight="@+id/fotoreg"
    android:layout_alignBottom="@+id/fotoreg"
    android:layout_margin="1dp"
    android:gravity="center"
    android:text="@string/fotografia"
    android:textColor="#000000" />

    <Button
        android:id="@+id/registro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="18dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/registro"
        android:textColor="#FFFFFF"
        android:textStyle="bold" 
        android:layout_below="@+id/fotoreg"/>

    <TextView
        android:id="@+id/resgistrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcion"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/registrocom"
        android:textColor="#000000"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/errorreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcion"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/errorreg"
        android:textColor="#000000"
        android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>