<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100" >
    </LinearLayout>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/cabecera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/usuario"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="177dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" >
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/aceptar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/errorlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/errorlog"
        android:textColor="#000000"
        android:textStyle="bold" />

</RelativeLayout>