<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cabeceracom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/mapa"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <fragment
        android:id="@+id/mvMapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cabeceracom"
        class="com.google.android.gms.maps.MapFragment" />

    <LinearLayout
        android:id="@+id/opcionesmapa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mvMapa"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/satelite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/satelite"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estandar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/estandar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ruta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/ruta"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>