<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout
    android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100" >       
        
</LinearLayout>              

        <AutoCompleteTextView
            android:id="@+id/ciudad_buscar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cabecera"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ubicacionactual"
            android:textColor="#FFFFFF" >

            <requestFocus />
        </AutoCompleteTextView>

        
        
        <RelativeLayout
    	android:id="@+id/pie"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">      

        
            <Button
            android:id="@+id/aceptar"
			android:layout_width="match_parent"
        	android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" 
            android:background="#000000"
        	android:gravity="center"
        	android:textColor="#FFFFFF"
        	android:textStyle="bold"
            android:text="@string/buscar">
            </Button>
            
            <Button
            android:id="@+id/filtrosbus"
			android:layout_width="match_parent"
        	android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="#000000"
        	android:gravity="center"
        	android:textColor="#FFFFFF"
        	android:textStyle="bold"
            android:text="@string/busquedaavan" 
            android:layout_below="@+id/aceptar"/>
        
</RelativeLayout>  

</RelativeLayout>

