<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cabeceracom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/comentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/comentarios"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enviocoment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/enviocoment"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

        <ListView
            android:id="@+id/listacomentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:divider="#000000"
            android:dividerHeight="2dp"
            android:layout_below="@+id/entercoment"
            tools:listitem="@layout/listcoments" >
        </ListView>

    <RelativeLayout
        android:id="@+id/entercoment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabeceracom"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/introcomentariosjson"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/botoncomentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/introcomentariosjson"
            android:layout_centerHorizontal="true"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/botoncoment"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>